gitops/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app
  labels:
    app.kubernetes.io/part-of: tf-ansible-k3s-argocd-azure
